fix: correect z-index in the navigation

--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -9,8 +9,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   min-height: 50px;
   margin: 0 auto;
